fix(client/Modal.js): fixed modal unable to close on small screens

--- a/client/src/styles/layout/_modal.scss
+++ b/client/src/styles/layout/_modal.scss
@@ -1,21 +1,20 @@
 .modal-background {
   position: fixed;
   display: grid;
-  grid-template-rows: 4rem auto;
   height: 100vh;
   width: 100vw;
   margin: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.85);
   z-index: 1;
+  cursor: pointer;
 }
 
 .image-modal {
-  display: grid;
-  justify-items: center;
-  align-items: top;
-  margin-top: 1rem;
+  margin: 0 auto;
+  margin-top: 2rem;
   z-index: 2;
+  cursor: pointer;
   img {
     max-width: 80vw;
     height: auto;
@@ -32,15 +31,4 @@
       width: auto;
     }
   }
-}
-
-.image-modal_close {
-  z-index: 3;
-  width: 2rem;
-  height: 2rem;
-  grid-row-start: 1;
-  justify-self: right;
-  margin-right: 2rem;
-  margin-top: 2rem;
-  margin-bottom: 0;
 }
